# to-do

./: README.md  docker-compose.yml
assets/: project.drawio
load-balancer/: nginx_notification.conf  nginx_to_do.conf
notification/: .dockerignore  .env.sample  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
notification/proto/: notification.proto
notification/src/: grpc.rs  handler.rs  main.rs
tests/: postman_collection.json
to-do/: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
to-do/api/: handlers.go  router.go
to-do/api/notification/: notification.pb.go  notification_grpc.pb.go
to-do/cmd/: main.go
to-do/database/: database.go
to-do/models/: item.go
