[package]
name = "notification"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.37", features = ["full"] }
lapin = "2.3.3"
tokio-amqp = "2.0.0"
futures-lite = "2.3.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
async-global-executor = "2.4.1"
tokio-executor-trait = "2.1.1"
tokio-reactor-trait = "1.1.0"
dotenv = "0.15.0"

[build-dependencies]
tonic-build = "0.11"
